Moved margings around to fix double scrollbar in Edge/FireFox

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,5 +3,4 @@ app {
 	display: flex;
 	height: 100%;
 	overflow: auto;
-	margin-top: 90px;
 }
