--- a/src/app/room/room.component.scss
+++ b/src/app/room/room.component.scss
@@ -3,7 +3,7 @@ room {
 	flex: 1 1 100%;
 	align-items: center;
 	flex-direction: column;
-
+	margin-top: 90px;
 	.roomName {
 		color: gray;
 		margin-top: 10px;
